--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,14 @@ dependencies:
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.5
   firebase_auth: ^3.3.4
+  firebase_storage: ^10.2.4
   provider: ^6.0.2
-
+  random_string: ^2.3.1
+  fluttertoast: ^8.0.8
+  image_picker: ^0.8.4+4
+  permission_handler: ^8.3.0
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
